# Singleton

./: CMakeLists.txt
include/: db.h
src/: db.cpp
test/: test.cpp
